--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <!-- courses finished -->
         <!-- Modal sectiion starts -->
         <section class="container my-5 rounded" style="background-color: #289BDE;"> 
-            <div class="row align-items-center my-5 g-5">
+            <div class="row align-items-center my-5">
                 <div class="col-lg-6 col-md-12 col-12 my-5">
                     <h1 class="color-text">Ready to join?</h1>
                     <p class="color-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
